[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/textures/player/skull.png" type="Texture" id=1]
[ext_resource path="res://Player/StateManager.gd" type="Script" id=2]
[ext_resource path="res://Player/Idle.gd" type="Script" id=3]
[ext_resource path="res://Player/Walk.gd" type="Script" id=4]
[ext_resource path="res://Player/Player.gd" type="Script" id=5]
[ext_resource path="res://Player/InputManager.gd" type="Script" id=6]
[ext_resource path="res://Player/Jump.gd" type="Script" id=7]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -6, -6, 5, -6, 5, 6, -6, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.0, 3.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="smallBox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="StateManager"]
script = ExtResource( 3 )

[node name="Walk" type="Node" parent="StateManager"]
script = ExtResource( 4 )

[node name="Jump" type="Node" parent="StateManager"]
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 5 )
anims/Walk = SubResource( 4 )

[node name="InputManager" type="Node" parent="."]
script = ExtResource( 6 )
[connection signal="complete" from="StateManager/Walk" to="StateManager" method="_on_Walk_complete"]
[connection signal="flip" from="StateManager/Walk" to="." method="_on_Walk_flip"]
[connection signal="complete" from="StateManager/Jump" to="StateManager" method="_on_Jump_complete"]
[connection signal="flip" from="StateManager/Jump" to="." method="_on_Jump_flip"]
[connection signal="player_jump" from="InputManager" to="StateManager" method="_on_InputManager_player_jump"]
[connection signal="player_move" from="InputManager" to="StateManager" method="_on_InputManager_player_move"]
